--- a/front-end/src/profile.html
+++ b/front-end/src/profile.html
@@ -15,7 +15,7 @@
           </div>
         </div>
         <div class="flex items-center">
-          <a href="#" class=" text-white font-semibold hover:underline">Report Lost</a>
+          <a href="report.html" class=" text-white font-semibold hover:underline">Report Lost</a>
           <a href="#" class="ml-4 text-green-500 hover:underline">Dashboard</a>
           <div class="ml-4">
             <img src="Assets/profile.jpg" alt="Profile Avatar" class="w-8 h-8 rounded-full">
