--- a/frontend/SignupPage.html
+++ b/frontend/SignupPage.html
@@ -22,6 +22,8 @@
 
     <button id="submitbutton" type="submit" class="px-4 py-2 mb-3 bg-blue-500 text-white rounded-lg hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500">Create Account</button>
     <div id="errorMessage" class="text-red-500 text-sm"></div>
+
+    <p class="text-sm text-left">Have an account?<a href="loginPage.html" class="text-blue-700">Login</a></p>
   </form>
 
   <script>
