--- a/frontend/loginPage.html
+++ b/frontend/loginPage.html
@@ -10,7 +10,7 @@
             <h2 class="text-2xl font-bold mb-4">Login Form</h2>
         
             <form id="loginForm" class="flex flex-col justify-between max-w-3xl mx-auto p-8 border border-gray-300 rounded-lg shadow-lg">
-                <p>Do you have an account? <a href="./SignupPage.html"> Sign Up</a></p>
+                <p>Do you have an account? <a href="./SignupPage.html" class="text-blue-700 hover:text-gray-900"> Sign Up</a></p>
                 <label for="email" class="mb-4">Email:</label>
                 <input type="email" id="email" name="email" placeholder="Email" required class="px-4 py-2 mb-4 rounded-lg border border-gray-300 focus:outline-none focus:ring-2 focus:ring-blue-500">
             
