--- a/frontend/loginPage.html
+++ b/frontend/loginPage.html
@@ -53,7 +53,7 @@
                 .then(data => {
                     console.log('Success:', data);
                     localStorage.setItem('token', data.token);
-                    window.location.href = 'accountUser.html';
+                    // window.location.href = 'accountUser.html';
                 })
                 .catch((error) => {
                     console.error('Error:', error);
